testing new things

--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -2,6 +2,8 @@
 
 {% block content %}
 
+{% endblock %}
+
 <!-- index.html content starts here -->
 <div class="container-fluid">
     <div class="row">
