--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -1,8 +1,10 @@
 {% extends "base.html" %}
 
+{% load static %}
+
 {% block content %}
 
-{% endblock %}
+
 
 <!-- index.html content starts here -->
 <div class="container-fluid">
