--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -2,7 +2,8 @@
 
 {% load i18n %}
 
-{% block head_title %}{% trans "Signup" %}{% endblock %}
+{% block head_title %}{% trans "Signup" %}
+{% endblock %}
 
 {% block content %}
 <div class="container">
