--- a/templates/base.html
+++ b/templates/base.html
@@ -119,5 +119,7 @@
         </script>
 
 <script src="{% static 'js/script.js' %}"></script>
+    {% block extras %}
+    {% endblock %}
 </body>
 </html>
